# SARA-GraphRAG_simple

Graph-RAG/: README.md  env_exaple  pyproject.toml
Graph-RAG/graph_rag/: agent.py  kg_construction.py  kg_retreiver.py  kg_schema.py  knowledge_graph_construction.ipynb  main.py  test.ipynb
Graph-RAG/graph_rag/data_store/: LittleBear_graphrag_articles_sample.json
Graph-RAG/graph_rag/translations/: littlebear_translations.txt
